@@ -5,6 +5,7 @@ Changes:
 - Upgrade to FreeBSD 10.1 RELEASE p9.
 - Add Home, Insert, Delete, End, Page Up/Down keys to shell.
 - Increase upload size in Webserver service up to 16GiB. (websrv_maxrequestsize)
+- Support aclinherit/aclmode ZFS properties.
 - Upgrade php to 5.6.8.
 - Upgrade tzdata to 2015d.
 - Upgrade mDNSResponder to 567.
